Bug 346035. Force <stack> children to be full-fledged stacking contexts and put their display items in the Content display list. r+sr=dbaron